fixed navbar with z-index

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -6,6 +6,7 @@
   display:flex;
   justify-content: space-between;
   font-weight: bold;
+  z-index: 1000;
 }
 
 .navbar-lewagon .navbar-collapse {
